--- a/blackboard.ipynb
+++ b/blackboard.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.toptal.com/game/video-game-physics-part-ii-collision-detection-for-solid-objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,36 +23,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bounds = [[(0, 1), (0, 1)],\n",
-    "          [(2, 4), (1, 4)],\n",
-    "          [(1, 3), (2, 3)]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bounds = [[(0, 10)] ,[(1, 9)], [(2, 8)], [(9, 10)], [(11, 12)]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_bounds = sorted([b[0] for b in bounds])\n",
-    "x_order = sorted(range(len(bounds)), key = lambda i: bounds[i][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -58,26 +37,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_bounds = [tuple(sorted((random.uniform(0, 100), random.uniform(0, 100)))) for _ in range(1000)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "x_bounds = [tuple(sorted((random.uniform(0, 100), random.uniform(0, 100)))) for _ in range(1000)]\n",
     "sorted_x_bounds = sorted(x_bounds)\n",
     "x_order = list(range(len(sorted_x_bounds)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insertionSort(arr): \n",
+    "  \n",
+    "    # Traverse through 1 to len(arr) \n",
+    "    for i in range(1, len(arr)): \n",
+    "  \n",
+    "        key = arr[i] \n",
+    "  \n",
+    "        # Move elements of arr[0..i-1], that are \n",
+    "        # greater than key, to one position ahead \n",
+    "        # of their current position \n",
+    "        j = i-1\n",
+    "        while j >=0 and key < arr[j] : \n",
+    "                arr[j+1] = arr[j] \n",
+    "                j -= 1\n",
+    "        arr[j+1] = key "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,30 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# smart algorithm\n",
-    "def smart(sorted_x_bounds, x_order):\n",
-    "    tos = {0: sorted_x_bounds[0][0]}\n",
-    "    collisions2 = [[False] * len(sorted_x_bounds) for _ in range(len(sorted_x_bounds))]\n",
-    "\n",
-    "    for i, x_bound in zip(x_order, sorted_x_bounds):\n",
-    "        for j in tuple(tos.keys()):\n",
-    "            if x_bound[0] >= tos[j]:\n",
-    "                del tos[j]\n",
-    "            else:\n",
-    "                collisions2[i][j] = collisions2[j][i] = True\n",
-    "\n",
-    "        tos[i] = x_bound[1]\n",
-    "    \n",
-    "    return collisions2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +144,7 @@
        "True"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
