--- a/blackboard.ipynb
+++ b/blackboard.ipynb
@@ -37,18 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_bounds = [tuple(sorted((random.uniform(0, 100), random.uniform(0, 100)))) for _ in range(1000)]\n",
-    "sorted_x_bounds = sorted(x_bounds)\n",
-    "x_order = list(range(len(sorted_x_bounds)))"
+    "x_bounds = [tuple(sorted((random.uniform(0, 100), random.uniform(0, 1000)))) for _ in range(1000)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,31 +69,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# brute force\n",
-    "def brute(sorted_x_bounds):\n",
-    "    collisions1 = [[False] * len(sorted_x_bounds) for _ in range(len(sorted_x_bounds))]\n",
-    "    for i in range(len(sorted_x_bounds)):\n",
-    "        for j in range(len(sorted_x_bounds)):\n",
-    "            if sorted_x_bounds[i][0] < sorted_x_bounds[j][0] < sorted_x_bounds[i][1] or sorted_x_bounds[i][0] < sorted_x_bounds[j][1] < sorted_x_bounds[i][1]:\n",
+    "def brute(bounds):\n",
+    "    collisions1 = [[False] * len(bounds) for _ in range(len(bounds))]\n",
+    "    for i in range(len(bounds)):\n",
+    "        for j in range(len(bounds)):\n",
+    "            if bounds[i][0] < bounds[j][0] < bounds[i][1] or bounds[i][0] < bounds[j][1] < bounds[i][1]:\n",
     "                collisions1[i][j] = collisions1[j][i] = True\n",
     "    return collisions1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def smart_2(sorted_x_bounds):\n",
-    "    collisions = [[False] * len(sorted_x_bounds) for _ in range(len(sorted_x_bounds))]\n",
+    "def smart_2(bounds):\n",
+    "    collisions = [[False] * len(bounds) for _ in range(len(bounds))]\n",
     "    \n",
     "    l = []\n",
-    "    for i, x in enumerate(sorted_x_bounds):\n",
+    "    for i, x in enumerate(bounds):\n",
     "        l.append((x[0], \"s\", i))\n",
     "        l.append((x[1], \"e\", i))\n",
     "    l.sort()\n",
@@ -109,33 +107,33 @@
     "        elif t[1] == \"e\":\n",
     "            active_particles.remove(t[2])\n",
     "            \n",
-    "    for i in range(len(sorted_x_bounds)):\n",
+    "    for i in range(len(bounds)):\n",
     "        collisions[i][i] = False\n",
-    "            \n",
+    "    \n",
     "    return collisions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c1 = brute(sorted_x_bounds)"
+    "c1 = brute(x_bounds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c3 = smart_2(sorted_x_bounds)"
+    "c3 = smart_2(x_bounds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +142,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
